# AVRClock

./: .tags  CMakeLists.txt  Hello.sim1  LICENSE  README.md
.github/workflows/: BuildCode.yml  blank.yml
ArduinoClock/: ArduinoClock.ino  BlinkState.hpp  Button.cpp  Button.hpp  Clock.cpp  Clock.hpp  ClockEdit.cpp  ClockEdit.hpp  ClockShield.cpp  ClockShield.hpp  DayOfWeekEdit.cpp  DayOfWeekEdit.hpp  HourEdit.cpp  HourEdit.hpp  HourEditState.cpp  KamaFilter.cpp  KamaFilter.h  LowFrequence.cpp  LowFrequence.hpp  MinEdit.cpp  MinEdit.hpp  MinEditState.hpp  MinutesEdit.cpp  MinutesEdit.hpp  Schedule.cpp  Schedule.hpp  ShowTime.cpp  ShowTime.hpp  ShowTimeState.hpp  SleepState.cpp  SleepState.hpp  State.cpp  State.hpp  StateManager.cpp  StateManager.hpp  TTSDisplay.cpp  TTSDisplay.h  TTSTime.h  Temperature.cpp  Temperature.hpp  (+8 more)
ArduinoClock/src/: Streaming.h  TTSDisplay.cpp  TTSDisplay.h
ArduinoClock/src/lib/: TTSTime.cpp  TTSTime.h
back/: BlinkState.cpp  BlinkState.hpp  ButtonState.cpp  ButtonState.hpp  Clock.ino  ClockShield.cpp  ClockShield.hpp  DayOfWeekEdit.cpp  DayOfWeekEdit.hpp  DelayState.cpp  DelayState.hpp  EditHour.cpp  EditHour.hpp  HourEdit.cpp  HourEdit.hpp  HourEditState.hpp  InputState.hpp  MinEdit.cpp  MinEdit.hpp  MinEditState.cpp  Schedule.cpp  ShowTime.cpp  ShowTime.hpp  ShowTimeState.cpp  SleepState.cpp  SleepState.hpp  State.hpp  Streaming.h  TTSButton.h  TTSLed.h  TTSLight.h  TTSTemp.h  Timer.c  Timer.h
src/: Clock.cpp  Clock.hpp  main.cpp
tool/: build_tool.sh
